CREATE TABLE CapMarket_LH.Axioma_Risk (
  `Date` string,
  `PortfolioManager` string,
  `PositionGroup` string,
  `AssetDescription` string,
  `Ticker` string,
  `BloombergTicker` string,
  `AssetType` string,
  `LocalCurrency` string,
  `Direction` string,
  `CUSIP` string,
  `ISIN` string,
  `SEDOL` string,
  `QuantityEOD` double,
  `MarketPriceBaseEOD` double,
  `MarketValueLocalEOD` double,
  `MarketValueBaseEOD` double,
  `UnderlyingPrice` double,
  `VaR90` double,
  `VaR95` double,
  `VaR99` double,
  `Pct_VaR95` double,
  `Pct_VaR95_AUM` double,
  `Pct_VaR90` double,
  `Pct_VaR90_AUM` double,
  `Pct_VaR99` double,
  `Pct_VaR99_AUM` double,
  `VaRPeriod` string
) USING DELTA;

CREATE TABLE CapMarket_LH.MSFS_Position (
  `Date` string,
  `PortfolioManager` string,
  `PositionGroup` string,
  `Country` string,
  `AssetDescription` string,
  `Ticker` string,
  `BloombergTicker` string,
  `AssetType` string,
  `LocalCurrency` string,
  `Direction` string,
  `PBSource` string,
  `CUSIP` string,
  `ISIN` string,
  `SEDOL` string,
  `AssetCategory` string,
  `AssetSubCategory` string,
  `QuantityEOD` double,
  `MarketPriceBaseEOD` double,
  `MarketValueLocalEOD` double,
  `MarketValueBaseEOD` double,
  `DailyPNL` double,
  `MTDPNL` double,
  `YTDPNL` double,
  `AUM` double,
  `UnderlyingPrice` double,
  `UnitCost` double
) USING DELTA;

CREATE TABLE CapMarket_LH.FlexTrade_Position (
  `Date` string,
  `PortfolioManager` string,
  `PositionGroup` string,
  `Country` string,
  `AssetDescription` string,
  `Ticker` string,
  `BloombergTicker` string,
  `AssetType` string,
  `LocalCurrency` string,
  `Direction` string,
  `CUSIP` string,
  `ISIN` string,
  `SEDOL` string,
  `QuantityEOD` double,
  `MarketPriceBaseEOD` double,
  `MarketValueLocalEOD` double,
  `MarketValueBaseEOD` double,
  `Delta` double,
  `DeltaAdjustedNetExposure` double,
  `UnderlyingPrice` double,
  `TickUnit` double,
  `CS01` double,
  `RiskFactor` double,
  `Vega` double,
  `VegaAdjustedExposure` double
) USING DELTA;

CREATE TABLE CapMarket_LH.JPMC_Position (
  `Date` string,
  `PortfolioManager` string,
  `PositionGroup` string,
  `AssetDescription` string,
  `Ticker` string,
  `BloombergTicker` string,
  `AssetType` string,
  `LocalCurrency` string,
  `Direction` string,
  `CUSIP` string,
  `ISIN` string,
  `SEDOL` string,
  `FinancingRate` double,
  `QuantityEOD` double,
  `MarketPriceBaseEOD` double,
  `MarketValueLocalEOD` double,
  `MarketValueBaseEOD` double,
  `UnderlyingPrice` double
) USING DELTA;

CREATE TABLE CapMarket_LH.BB_SecurityMaster (
  `Date` string,
  `PortfolioManager` string,
  `PositionGroup` string,
  `AssetDescription` string,
  `Ticker` string,
  `BloombergTicker` string,
  `AssetType` string,
  `LocalCurrency` string,
  `Direction` string,
  `CUSIP` string,
  `ISIN` string,
  `SEDOL` string,
  `EarningsDate` string,
  `AssetTypeBBG` string,
  `QuantityEOD` double,
  `MarketPriceBaseEOD` double,
  `MarketValueLocalEOD` double,
  `MarketValueBaseEOD` double,
  `UnderlyingPrice` double,
  `FIGIID` string,
  `ID_BB_GLOBAL` string
) USING DELTA;

CREATE TABLE CapMarket_LH.DataHub_Position (
  `Date` timestamp,
  `PortfolioManager` string,
  `PositionGroup` string,
  `Country` string,
  `AssetDescription` string,
  `Ticker` string,
  `BloombergTicker` string,
  `AssetType` string,
  `LocalCurrency` string,
  `Direction` string,
  `PBSource` string,
  `CUSIP` string,
  `ISIN` string,
  `SEDOL` string,
  `EarningsDate` timestamp,
  `AssetTypeBBG` string,
  `AssetCategory` string,
  `AssetSubCategory` string,
  `FinancingRate` double,
  `QuantityEOD` double,
  `MarketPriceBaseEOD` double,
  `MarketValueLocalEOD` double,
  `MarketValueBaseEOD` double,
  `DailyPnL` double,
  `MTDPnL` double,
  `YTDPnL` double,
  `Delta` double,
  `DeltaAdjustedNetExposure` double,
  `AUM` double,
  `UnderlyingPrice` double,
  `TickUnit` double,
  `UnitCost` double,
  `YASModDur` double,
  `CS01` double,
  `RiskFactor` double,
  `Vega` double,
  `VegaAdjustedExposure` double,
  `LTDSharpeAnnualizedbyAUM` double,
  `YTDSharpeAnnualizedbyAUM` double,
  `30DaySharpeAnnualizedbyAUM` double,
  `90DaySharpeAnnualizedbyAUM` double,
  `30DayVolatilityAnnualizedbyAUM` double,
  `90DayVolatilityAnnualizedbyAUM` double,
  `YTDVolatilityAnnualizedbyAUM` double,
  `LTDVolatilityAnnualizedbyAUM` double,
  `VaR90` double,
  `VaR95` double,
  `VaR99` double,
  `Pct_VaR95` double,
  `Pct_VaR95_AUM` double,
  `Pct_VaR90` double,
  `Pct_VaR90_AUM` double,
  `Pct_VaR99` double,
  `Pct_VaR99_AUM` double,
  `VaRPeriod` string
) USING DELTA;
